# Vidnovagram

./: .gitignore  TELEGRAM_FEATURES_PLAN.md  VOIP_IMPLEMENTATION.md  VOIP_VIDEO_BRIDGE_PLAN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
MadelineProto/: README.md
public/: voip-capture-worklet.js  voip-playback-worklet.js
src/: App.css  App.tsx  cache.ts  changelog.ts  constants.ts  db.ts  settings.ts  telemetry.ts  types.ts  voip.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.tauri/: vidnovagram.key.pub
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: AccountPickerModal.tsx  AccountRail.tsx  ActiveAccountCard.tsx  AddContactModal.tsx  AddToAccountModal.tsx  AlbumBubble.tsx  AttachedPreview.tsx  AuthMedia.tsx  BgUploadsContainer.tsx  BubbleHeader.tsx  BubbleOrigin.tsx  BusinessContactCard.tsx  CallAudioPlayer.tsx  CallCardBubble.tsx  ChannelReadonlyBar.tsx  ChatHeader.tsx  ChatSearchBar.tsx  ClientCardTab.tsx  ClientsTab.tsx  ComposeModal.tsx  ConfirmDialog.tsx  ConfirmDialogs.tsx  ContactBubble.tsx  ContactList.tsx  ContactName.tsx  ContactProfileEditor.tsx  ContactProfileModal.tsx  DateSeparator.tsx  DeletedLabel.tsx  DocumentBubble.tsx  FailedStatusLabel.tsx  FileUploadModal.tsx  ForumTopicsPanel.tsx  ForwardBar.tsx  ForwardModal.tsx  GeoBubble.tsx  GmailEmailList.tsx  GmailSidebarFilter.tsx  GroupMembersPanel.tsx  InlineButtons.tsx  (+48 more)
src/hooks/: useAuthController.ts  useContacts.ts  useGmailNotifications.ts  useMessages.ts  useMessengerWebSocket.ts  useMetaAccounts.ts  useMetaContacts.ts  useNotificationSound.ts  useOperatorPresence.ts  usePanelResize.ts  useTauriUpdater.ts  (+4 more)
(+15 files in other folders)
