[package]
name = "vidnovagram"
version = "0.2.0"
description = "Vidnovagram — multi-messenger desktop app for Vidnova Clinic"
authors = ["Alex <alex1981tech@gmail.com>"]
license = "MIT"
repository = "https://github.com/Alex1981-tech/Vidnovagram"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
